<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style = "@style/CustomConstraintLayout.Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusedByDefault="true"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/reg_text_greeting"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:text="@string/reg_greeting"
        android:textSize="32dp"
        android:textStyle="normal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reg_registration_btn"/>


    <EditText
        android:id="@+id/reg_text_email_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/input_field"
        android:capitalize="none"
        android:ems="10"
        android:fontFamily="@font/my_written"
        android:gravity="center_vertical|left"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.1"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingBottom="4dp"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/reg_text_nickname_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:hint="Nickname"
        android:minHeight="48dp"
        android:textSize="20dp"
        android:gravity="center_vertical|left"
        android:paddingBottom="4dp"
        android:paddingLeft="5dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reg_text_name_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:minHeight="48dp"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:hint="Name"
        android:textSize="20dp"
        android:gravity="center_vertical|left"
        android:paddingBottom="4dp"
        android:paddingLeft="5dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reg_text_surname_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:minHeight="48dp"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:hint="Surname"
        android:textSize="20dp"
        android:gravity="center_vertical|left"
        android:paddingBottom="4dp"
        android:paddingLeft="5dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reg_text_password_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/my_written"
        android:gravity="center_vertical|left"
        android:hint="Password"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:minHeight="48dp"
        android:paddingBottom="4dp"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/reg_text_password_repeat_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_text_greeting" />

    <EditText
        android:id="@+id/reg_text_password_repeat_field"
        style = "@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/my_written"
        android:gravity="center_vertical|left"
        android:hint="Repeat your password"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:minHeight="48dp"
        android:paddingBottom="4dp"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/reg_registration_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_text_password_field" />

    <Button
        android:id="@+id/reg_registration_btn"
        style="@style/CustomTextButtonActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:text="@string/next_btn"
        android:textAllCaps="false"
        android:textSize="32dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_prev_step_btn"
        style = "@style/CustomBorderedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:fontFamily="@font/my_written"
        android:letterSpacing="0.1"
        android:text="@string/previous_btn"
        android:textAllCaps="false"
        android:textSize="32dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_registration_btn"
        android:visibility="gone"

        />

</androidx.constraintlayout.widget.ConstraintLayout>